# rock

./: Cargo.toml  Makefile  README.md  rerock.sh
rock/: Cargo.toml
rock-fmt/: Cargo.toml
rock-fmt/src/: main.rs
rock-lsp/: Cargo.toml
rock-lsp/src/: main.rs
rock/src/: ast.rs  ast_walker.rs  codegen_pass.rs  compiler_error.rs  debug.rs  declaration_pass.rs  format.rs  lib.rs  main.rs  parser.rs  semantic.rs  source_code.rs  symbol_table.rs  types.rs
stick/: Cargo.toml
stick/src/: main.rs
tree-sitter-rock/: Cargo.toml  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
tree-sitter-rock/examples/: function.rock
tree-sitter-rock/queries/: highlights.scm  indent.scm
tree-sitter-rock/src/: grammar.json  node-types.json  parser.c
