[package]
name = "rock-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rock = { path = "../rock" }

anyhow = "1.0"
lsp-server = "0.7.7"
lsp-types = "0.97.0"

serde = "1.0"
serde_json = "1.0"

ustr = "0.10.0"
