[package]
name = "rock"
version = "0.1.0"
edition = "2021"
license = "MPL"

[dependencies]
tree-sitter = "0.24.3"
tree-sitter-rock = { path = "../tree-sitter-rock" }

clap = { version = "4.5.20", features = ["derive"] }

anyhow = "1.0.89"
ariadne = "0.4.1"
dashmap = "6.1.0"
ustr = "1.0.0"
duplicate = "1.0.0"
log = "0.4.22"
env_logger = "0.11.5"
